--- a/login.html
+++ b/login.html
@@ -69,14 +69,8 @@
         </nav>
     </header>
 
-    <!-- Formulário de login -->
-    <div class="form-login">
-        <h2>Login</h2>
-        <form>
-            <input type="text" placeholder="Usuário" required>
-            <input type="password" placeholder="Senha" required>
-            <button type="submit">Entrar</button>
-        </form>
+    <div>
+        
     </div>
 
     <!-- Rodapé -->
