--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <header>
     <div class="logo">
       <img id="img_logo" src="logo.png" alt="Logo">
-      <h1 class="federant-regular"><b>Os Melhores Produtos Estão Aqui !</b></h1>
+      <h1 class="federant-regular"><b>Os Melhores Produtos Estão Aqui!</b></h1>
     </div>
     <nav>
       <ul>
@@ -97,7 +97,7 @@
         <input type="hidden" name="produto">
         <input type="hidden" name="valor">
 
-        <button type="submit">Finalizar Compra</button>
+        <button type="submit" src="login.html">Finalizar Compra</button>
       </form>
     </div>
   </div>
