--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <h3>Spider-Man 2</h3>
         <p>R$ 249,90</p>
       </div>
-      <div class="produto" data-nome="Resident Evil 4 Remake" data-preco="130,00" data-img="https://static.wikia.nocookie.net/residentevil/images/f/f7/RE4_GC_PAL.jpg/revision/latest?cb=20090611173549">
-        <img src="https://static.wikia.nocookie.net/residentevil/images/f/f7/RE4_GC_PAL.jpg/revision/latest?cb=20090611173549" alt="Resident Evil 4 Remake" />
+      <div class="produto" data-nome="Resident Evil 4 Remake" data-preco="130,00" data-img="RE4.png">
+        <img src="RE4.png" alt="Resident Evil 4 Remake" />
         <h3>Resident Evil 4 Remake</h3>
         <p>R$ 130,00</p>
       </div>
