--- a/jogos.html
+++ b/jogos.html
@@ -38,7 +38,7 @@
       </div>
       <div class="produto" data-nome="Bioshock 1" data-preco="39,00" data-img="https://store-images.s-microsoft.com/image/apps.44813.70815935186366227.c6576fc3-cfa7-4d6d-a0c3-857f3a4bfe46.ef1556da-e7b9-404c-8e09-5d330e29da19?q=90&w=177&h=265">
         <img src="https://store-images.s-microsoft.com/image/apps.44813.70815935186366227.c6576fc3-cfa7-4d6d-a0c3-857f3a4bfe46.ef1556da-e7b9-404c-8e09-5d330e29da19?q=90&w=177&h=265" alt="Bioshock 1" />
-        <h3>Bioshock 1</h3>
+        <h3>Bioshock</h3>
         <p>R$ 39,00</p>
       </div>
       <div class="produto" data-nome="Portal 2" data-preco="69,00" data-img="https://m.media-amazon.com/images/I/71aoAIrUlqL._AC_SY741_.jpg">
@@ -150,8 +150,8 @@ Valor: R$ ${valor}`);
       modal.style.display = "none";
       formCompra.reset();
 
-      // Redirecionar para login.html
-      window.location.href = "login.html";
+      // Redirecionar para compra.html
+      window.location.href = "compra.html";
     });
 
     window.addEventListener("click", (e) => {
